--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@200;300;400;500;600;700&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=EB+Garamond:ital,wght@0,400;0,500;0,600;0,700;0,800;1,400;1,500;1,600;1,700;1,800&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Berkshire+Swash&display=swap');
-
+@import url('https://fonts.googleapis.com/css2?family=Lora:wght@400;500;600;700&display=swap');
 
 :root {
     /* --emas: #D0B003; */
@@ -13,8 +11,8 @@
     --hitam: #131211;
     --btn: #173652;
     --btn-hover: #0a2034;
-    --font-judul: 'Berkshire Swash', serif;
-    --font-paragraph: 'EB Garamond', serif;
+    --font-judul: 'Lora', serif;
+    --font-paragraph: 'Lora', sans-serif;
     --font-button: 'Poppins', sans-serif;
 }
 
@@ -46,7 +44,7 @@ body {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    font-family: 'Poppins', sans-serif;
+    font-family: var(--font-button);
     text-decoration: none;
     list-style: none;
 }
@@ -226,7 +224,7 @@ input[type="checkbox"] {
 /* Tentang */
 
 .tentang {
-    background: #131211;
+    background: var(--hitam);
     width: 100%;
     height: 1000px;
     position: relative;
@@ -250,15 +248,15 @@ input[type="checkbox"] {
 }
 
 .judul {
-    color: #ffffff;
+    color: var(--putih);
     font-family: var(--font-judul);
     font-size: 45px;
-    font-weight: 400;
+    font-weight: 600;
     width: 523px;
 }
 
 .penjelasan-tentang {
-    color: #ffffff;
+    color: var(--putih);
     text-align: left;
     font-family: var(--font-paragraph);
     font-size: 20px;
@@ -278,7 +276,7 @@ input[type="checkbox"] {
     justify-content: center;
     align-items: center;
     color: var(--hijau-hitam);
-    font-family: 'Poppins', sans-serif;
+    font-family: var(--font-button);
     font-size: 20px;
     font-weight: 400;
     transition: .3s ease;
@@ -312,7 +310,7 @@ input[type="checkbox"] {
 
 
 .masjid-transparant {
-    background-color: white;
+    background-color: var(--putih);
     background-image: url(/assets/masjid-transparant.png);
     width: 50%;
     height: 100%;
@@ -364,7 +362,7 @@ input[type="checkbox"] {
     height: auto;
     padding: 100px 40px 40px 40px;
     margin: auto;
-    background-color: #131211;
+    background-color: var(--hitam);
     border-bottom: 6px var(--emas) solid;
 }
 
@@ -374,7 +372,7 @@ input[type="checkbox"] {
 }
 
 .header h2 {
-    color: #fff;
+    color: var(--putih);
     font-size: 40px;
     font-family: var(--font-judul);
 }
@@ -399,13 +397,13 @@ input[type="checkbox"] {
     position: relative;
     display: flex;
     align-items: center;
-    border: 1px solid #ddd;
+    border: 1px solid var(--putih-beda);
     color: #121212;
     font-size: 16px;
     padding: 5px;
     border-radius: 8px;
     margin-bottom: 16px;
-    background-color: #fff;
+    background-color: var(--putih);
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
     cursor: pointer;
 }
@@ -416,7 +414,7 @@ input[type="checkbox"] {
 
 .card .isi h3 {
     font-size: 20px;
-    color: #D0B003;
+    color: var(--emas);
 }
 
 .card .isi .deskripsi {
@@ -438,7 +436,7 @@ input[type="checkbox"] {
     right: 0;
     margin-top: -20px;
     margin-right: 10px;
-    color: #131211;
+    color: var(--hitam);
     font-size: 40px;
 }
 
@@ -456,6 +454,11 @@ input[type="checkbox"] {
     margin-bottom: 20px;
 }
 
+.judul-waktu h2 {
+    font-family: var(--font-judul);
+    font-weight: 700;
+}
+
 .waktu {
     display: flex;
     justify-content: center;
@@ -468,7 +471,7 @@ input[type="checkbox"] {
     width: 100%;
     margin: 10px;
     background-color: #f0f0f0;
-    border: 2px solid #D0B003;
+    border: 2px solid var(--emas);
     border-radius: 8px;
     padding: 20px;
     text-align: center;
@@ -477,9 +480,10 @@ input[type="checkbox"] {
 
 .card-waktu h4 {
     line-height: 30px;
-    border-bottom: 3px #131211 solid;
+    border-bottom: 3px var(--hijau-hitam) solid;
     border-radius: 3px;
     margin-bottom: 10px;
+    font-family: var(--font-judul);
 }
 
 
@@ -607,6 +611,8 @@ input[type="checkbox"] {
 
 .judul-rukun h3 {
     color: var(--emas);
+    font-family: var(--font-judul);
+    font-weight: 700;
 }
 
 .rukun {
@@ -643,7 +649,7 @@ input[type="checkbox"] {
     padding-top: 4rem;
 }
 
-.container-toko .header-toko{
+.container-toko .header-toko {
     width: 95%;
     margin: 0 auto;
     border-bottom: 5px solid var(--hijau-tua);
@@ -834,7 +840,7 @@ input[type="checkbox"] {
     border-bottom: 1px;
     position: relative;
     bottom: 6px;
-    box-shadow: 62px -52px 0 -52px var(--emas) ;
+    box-shadow: 62px -52px 0 -52px var(--emas);
     z-index: 1;
     margin-top: -10px;
 }
@@ -859,6 +865,21 @@ input[type="checkbox"] {
 .container-toko .bawah-toko .card-toko.bintang .fa-star:last-child {
     opacity: 0.5;
 }
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 /* Donasi */
@@ -912,7 +933,7 @@ input[type="checkbox"] {
     overflow-y: auto;
 }
 
-.donasi-box::-webkit-scrollbar-track{
+.donasi-box::-webkit-scrollbar-track {
     border-radius: 10px;
 }
 
@@ -951,7 +972,7 @@ input[type="checkbox"] {
 
 .donation-item .donation-content h3 {
     line-height: 20px;
-    font-family: var(--font-paragraph);
+    font-family: var(--font-judul);
     font-size: 25px;
 }
 
@@ -1011,16 +1032,13 @@ input[type="checkbox"] {
     color: #fff;
 }
 
-
-
-
 .news-container {
     width: 100%;
     overflow: hidden;
 }
 
 .news-wrapper {
-    width: max-content; 
+    width: max-content;
     display: flex;
     overflow-x: auto;
     animation: marquee 80s linear infinite;
@@ -1070,8 +1088,29 @@ input[type="checkbox"] {
 }
 
 .news-wrapper:hover {
-    animation-play-state: paused; 
+    animation-play-state: paused;
 }
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 /* kontak */
@@ -1751,7 +1790,6 @@ footer .container-footer a {
     .news-item img {
         width: 175px;
     }
-
 }
 
 /* @media (max-width: 971px) {
